# Inverse_pca

./: PAPER.md  README.md  pyproject.toml
examples/: demo.py  plot_cluster_preservation.py  plot_dimension_sweep.py  plot_examples.py
inverse_pca/: __init__.py  generator.py
tests/: test_generator.py
