[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "inverse-pca"
version = "0.1.0"
description = "Statistical inverse PCA for synthetic high-dimensional data."
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["inverse_pca*"]
